# ECLNotepad

./: CMakeLists.txt  README
ECLLexer/: CMakeLists.txt  LexECL.cxx  LexECL.h
ECLNotepad/: CMakeLists.txt
cmake/: FindSCINTILLA.cmake  FindSCITE.cmake
properties/: SciTEGlobal.properties  ecl.properties
